NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');

09162013 -> jonnyboy -> fixed update releases showing insert release greater than actual inserted
09152013 -> jonnyboy -> fixed a few bugs
						added changes by bblanchon
						added categorize to requestid, fixed a few bugs, added set relnamestatus = 6 when releaseCleaner cleans name
09142013 -> jonnyboy -> added "S1 D1" names to regex for TV renaming
						added par2 filecheck to fixreleasenames, fixed bug in parsePAR2
						added option to set maximum per run in threaded fixreleasenames
						removed typo from FAQ
09122013 -> jonnyboy -> added update tv/movies and tmux_colors to tmux
						added script to show colors available to tmux, this should help you remove bad colors
09112013 -> jonnyboy -> changed query for pp to speed up query on large databases
09102013 -> jonnyboy -> added option to postprocess movie/tv only renamed releases
						added Safe Binary Threaded update, this maximizes thread usage for all groups, instead of running 1 thread to grab all from 1 group, this should be considered testing only, for now
						added check for $nntp in parsePAR2
09092013 -> jonnyboy -> updated backfill_groups.php and active_groups.php
                        rewrote the trigger to add another check
09082013 -> jonnyboy -> fixed bad patch 119, added triggers for and added index
                        changed pp additonal first query to passwordstatus BETWEEN -2 and -1, seems that -1 and -1 or = -1 takes a very long time
                        fixed bug in grabnzbs where failed to get article deleted collection from collections, added more output to grabnzbs, added unique index to nzbs
                        fixed python script echo properlly when run from php script, other minor tweaks
09072103 -> jonnyboy -> fixed bug where update_binaries not using compression after first grab