@@ -1,6 +1,7 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
-09162013 -> jonnyboy -> fixed update releases showing insert release greater than actual inserted
+09162013 -> jonnyboy -> bug fixes
+                        fixed update releases showing insert release greater than actual inserted
 09152013 -> jonnyboy -> fixed a few bugs
 						added changes by bblanchon
 						added categorize to requestid, fixed a few bugs, added set relnamestatus = 6 when releaseCleaner cleans name
